Fixed file updating issue